<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".activity.DriverInfoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:id="@+id/timeset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:layout_alignParentRight="true"
            android:textColor="@color/whitecolor"
            android:textSize="16sp"
            android:padding="10dp"
            android:layout_alignParentEnd="true" />


        <LinearLayout
            android:id="@+id/aa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/desing_driver_det"
            android:elevation="10dp"
            android:gravity="bottom"
            android:orientation="vertical"
            android:outlineSpotShadowColor="@color/blackcolor"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rideDetails"
                android:textColor="@color/blackcolor"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/trip_dis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tripDistance"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/trip_distance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="4.5 KM"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tripduration"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/trip_duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="4.5 KM"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="@color/blackcolor"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/billDetails"
                android:textColor="@color/blackcolor"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rideFare"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/trip_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="4.5 KM"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/specialDiscount"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="4.5 KM"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_access_fee"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="4.5 KM"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/booking_fee"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="4.5 KM"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="3dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Total_fare"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="4.5 KM"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/amts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="80"
                    android:textColor="@color/blackcolor"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="@string/note" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/wallet_button"
                    android:text="driver Info"
                    android:textColor="@color/whitecolor"
                    android:visibility="invisible"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="20dp" />

                <Button
                    android:id="@+id/info_driver"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/wallet_button"
                    android:text="driver Info"
                    android:textColor="@color/whitecolor"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="2dp" />

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>