<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.BillActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/payment_design"
        android:elevation="40dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bill"
            android:textColor="@color/blackcolor"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/rs_symbol"
            android:textColor="@color/whitecolor"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/amounts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="79"
            android:textColor="@color/whitecolor"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="Jan 13" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Monday , 02:30pm" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="35dp">
            <!--            <LinearLayout-->
            <!--                android:layout_width="2dp"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:background="@drawable/dash_line"-->
            <!--                android:layout_marginStart="8dp"-->
            <!--                android:layout_marginTop="20dp">-->
            <!--            </LinearLayout>-->
            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/dash_line"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:background="@drawable/create_circule"
                    android:text="" />

                <TextView
                    android:id="@+id/picAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="City Center, Gwalior"
                    android:textColor="@color/blackcolor"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:background="@drawable/create_circule"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:background="@drawable/create_circule"
                    android:text="" />

                <TextView
                    android:id="@+id/dropAddressss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="City Center, Gwalior"
                    android:textColor="@color/blackcolor"
                    android:textSize="15sp" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="5dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rating" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:numStars="5"
                    android:progressTint="@color/colorAccent" />
                <!--                    style="@style/Widget.AppCompat.RatingBar.Small"-->
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/payment_option"
            android:textColor="@color/blackcolor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/buttonOption"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:background="@drawable/cash_design"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/cash"
            android:textColor="@color/blackcolor" />

    </LinearLayout>


</LinearLayout>